Fixed margens on mobile version

--- a/css/general.css
+++ b/css/general.css
@@ -16,6 +16,5 @@ body {
 }
 
 .main-components {
-  display: flex;
-  flex-direction: column;
+  overflow: hidden;
 }
